update of aircraft instruments; more hyperlinks

--- a/mbdyn/manual/input/drivers.tex
+++ b/mbdyn/manual/input/drivers.tex
@@ -266,7 +266,7 @@ be set to \kw{no} and the mailbox must be already defined
 on the remote host;
 \item the number of channels \nt{columns\_number} determines how many
 columns can be accessed via the \kw{file} drive caller mechanism 
-of Section~\ref{sec:DRIVE:FILE}, as for all the other \kw{file} drivers.
+of Section~\ref{sec:DriveCaller:FILE}, as for all the other \kw{file} drivers.
 \end{itemize}
 This part of the program is rapidly evolving, so do please not expect
 too much documentation and backward compatibility.
