--- a/mbdyn/manual/input/input.tex
+++ b/mbdyn/manual/input/input.tex
@@ -46,9 +46,11 @@
 \input{../stdmacro}
 
 \newcommand{\kw}[1]{\textcolor{red}{\texttt{#1}}}
+\newcommand{\bkw}[1]{\texttt{<\textcolor{red}{#1}>}}
 \newcommand{\nt}[1]{\textcolor{blue}{\texttt{#1}}}
 \newcommand{\bnt}[1]{\texttt{<\textcolor{blue}{#1}>}}
 \newcommand{\ty}[1]{\textcolor{green}{\texttt{#1}}}
+\newcommand{\bty}[1]{\texttt{<\textcolor{green}{#1}>}}
 
 %\newcommand{\kw}[1]{\texttt{#1}}
 %\newcommand{\nt}[1]{\texttt{#1}}
