--- a/mbdyn/manual/mybib.bib
+++ b/mbdyn/manual/mybib.bib
@@ -23,6 +23,14 @@
 	AIAAJ = "{AIAA Journal}"
 }
 
+@string{
+	MUBO = {Multibody System Dynamics}
+}
+
+@string{
+	JCND = {J.\ of Computational and Nonlinear Dynamics}
+}
+
 @ARTICLE{ANDRIGHETTONI98,
 	author = "M. Andrighettoni and Paolo Mantegazza",
 	year = 1998,
@@ -3040,5 +3048,38 @@
 	edition = {Second},
 	publisher = {Cambridge University Press},
 	year = {1992}
+}
+
+@article{FUMAGALLI-CND-2011,
+	author = {A. Fumagalli and P. Masarati and M. Morandini and P. Mantegazza},
+	title = {Control Constraint Realization for Multibody Systems},
+	journal = JCND,
+	month = {January},
+	year = {2011},
+	volume = {6},
+	number = {1},
+	pages = {011002 (8 pages)},
+        note = {doi:10.1115/1.4002087}
+}
+
+@article{MASARATI-INVDYN2,
+	author = {Pierangelo Masarati},
+	title = {Computed Torque Control of Redundant Manipulators Using General-Purpose Software in Real-Time},
+	journal = MUBO,
+	year = {in press},
+	note = {doi:10.1007/s11044-013-9377-4}
+}
+
+@article{MASARATI-TOTALJ,
+	journal = MUBO,
+	note = {doi:10.1007/s11044-012-9320-0},
+	title = {A formulation of kinematic constraints imposed by kinematic pairs using relative pose in vector form},
+	author = {Pierangelo Masarati},
+	year = {2013},
+	volume = {29},
+	number = {2},
+	pages = {119--137},
+	online = {In press, available online 21 June 2012},
+	pdf = {masarati_2013_mubo_totalj.pdf}
 }
 
