--- a/mbdyn/manual/input/logfile.tex
+++ b/mbdyn/manual/input/logfile.tex
@@ -58,11 +58,11 @@ The \kw{aerodynamic body}.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{aero0}: \bnt{label} \bnt{node_label}
-        (\ty{Vec3}) \bnt{trail_left} (\ty{Vec3}) \bnt{lead_left}
-        (\ty{Vec3}) \bnt{trail_right} (\ty{Vec3}) \bnt{lead_right}
+        (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{trail_left} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{lead_left}
+        (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{trail_right} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{lead_right}
 \end{Verbatim}
 %\end{verbatim}
-The points are expressed as 3D vectors (\ty{Vec3}), whose origin and orientation
+The points are expressed as 3D vectors (\htmlref{\ty{Vec3}}{sec:Vec3}), whose origin and orientation
 is expressed in the reference frame of the node.
 All data are on one line, without continuation.
 
@@ -72,12 +72,12 @@ The two-node \kw{aerodynamic beam}.
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{aero2}: \bnt{label}
         \bnt{node_1_label}
-        (\ty{Vec3}) \bnt{trail_left} (\ty{Vec3}) \bnt{lead_left}
+        (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{trail_left} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{lead_left}
         \bnt{node_2_label}
-        (\ty{Vec3}) \bnt{trail_right} (\ty{Vec3}) \bnt{lead_right}
+        (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{trail_right} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{lead_right}
 \end{Verbatim}
 %\end{verbatim}
-The points are expressed as 3D vectors (\ty{Vec3}), whose origin and orientation
+The points are expressed as 3D vectors (\htmlref{\ty{Vec3}}{sec:Vec3}), whose origin and orientation
 is expressed in the reference frame of the respective nodes.
 All data are on one line, without continuation.
 
@@ -87,14 +87,14 @@ The three-node \kw{aerodynamic beam}.
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{aero3}: \bnt{label}
         \bnt{node_1_label}
-        (\ty{Vec3}) \bnt{trail_left} (\ty{Vec3}) \bnt{lead_left}
+        (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{trail_left} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{lead_left}
         \bnt{node_2_label}
-        (\ty{Vec3}) \bnt{trail_center} (\ty{Vec3}) \bnt{lead_center}
+        (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{trail_center} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{lead_center}
         \bnt{node_3_label}
-        (\ty{Vec3}) \bnt{trail_right} (\ty{Vec3}) \bnt{lead_right}
+        (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{trail_right} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{lead_right}
 \end{Verbatim}
 %\end{verbatim}
-The points are expressed as 3D vectors (\ty{Vec3}), whose origin and orientation
+The points are expressed as 3D vectors (\htmlref{\ty{Vec3}}{sec:Vec3}), whose origin and orientation
 is expressed in the reference frame of the respective nodes.
 All data are on one line, without continuation.
 
@@ -103,8 +103,8 @@ The \kw{axialrotation} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{axialrotation}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position\_*} vectors indicates the location of the joint
@@ -118,8 +118,8 @@ The two-node \kw{beam}.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{beam2}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{offset_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{offset_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{offset_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{offset_2}
 \end{Verbatim}
 %\end{verbatim}
 The beam \kw{label} is followed by the label and the offset of each node.
@@ -130,9 +130,9 @@ The three-node \kw{beam}.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{beam3}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{offset_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{offset_2}
-        \bnt{node_3_label} (\ty{Vec3}) \bnt{offset_3}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{offset_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{offset_2}
+        \bnt{node_3_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{offset_3}
 \end{Verbatim}
 %\end{verbatim}
 The beam \kw{label} is followed by the label and the offset of each node.
@@ -143,8 +143,8 @@ The \kw{brake} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{brake}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position\_*} vectors indicates the location of the joint
@@ -158,8 +158,8 @@ The \kw{clamp} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{clamp}: \bnt{label}
-        \bnt{node_label} (\ty{Vec3}) \bnt{position} (\ty{Mat3x3}) \bnt{orientation}
-        \bnt{node_label} (\ty{Vec3}) \bnt{position} (\ty{Mat3x3}) \bnt{orientation}
+        \bnt{node_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation}
+        \bnt{node_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation}
 \end{Verbatim}
 %\end{verbatim}
 The format is quite obscure; the \nt{position} and the \nt{orientation}
@@ -176,8 +176,8 @@ versions, where defined
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{joint_type}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 
     \bnt{joint_type} ::=
         [ \kw{invariant} ] \kw{deformable} \{ \kw{hinge} | [ \kw{displacement} ] \kw{joint} \}
@@ -194,8 +194,8 @@ The \kw{distance} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{distance}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{offset_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{offset_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{offset_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{offset_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{label} of the joint, followed by the label of each node
@@ -210,8 +210,8 @@ The \kw{gimbal rotation} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{gimbalrotation}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position\_*} vectors indicates the location of the joint
@@ -225,8 +225,8 @@ The \kw{inline} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{inline}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3})\bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3})\bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3})\bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3})\bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{label} of the joint, followed by the label of the node
@@ -242,8 +242,8 @@ The \kw{inplane} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{inplane}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{label} of the joint, followed by the label of the node
@@ -259,8 +259,8 @@ The \kw{prismatic} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{prismatic}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position\_*} vectors are zero,
@@ -276,7 +276,7 @@ The syntax is the same of the \kw{structural node}
 (Section~\ref{sec:APP:LOGFILE:STRUCTURAL_NODE}), namely
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \kw{relative frame structural node}: \bnt{label} (\ty{Vec3}) \bnt{X} \bnt{orientation_description}
+    \kw{relative frame structural node}: \bnt{label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{X} \bnt{orientation_description}
 \end{Verbatim}
 %\end{verbatim}
 
@@ -285,8 +285,8 @@ The \kw{revolute hinge} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{revolutehinge}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position\_*} vectors indicates the location of the joint
@@ -300,8 +300,8 @@ The \kw{revolute rotation} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{revoluterotation}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position\_*} vectors indicates the location of the joint
@@ -315,8 +315,8 @@ The \kw{rod} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{rod}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{offset_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{offset_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{offset_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{offset_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{label} of the joint, followed by the label of each node
@@ -331,8 +331,8 @@ The \kw{spherical hinge} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{sphericalhinge}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position\_*} vectors indicates the location of the joint
@@ -346,8 +346,8 @@ The \kw{spherical pin} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{sphericalpin}: \bnt{label}
-        \bnt{node_label} (\ty{Vec3}) \bnt{position} (\ty{Mat3x3}) \bnt{orientation}
-        \bnt{node_label} (\ty{Vec3}) \bnt{position} (\ty{Mat3x3}) \bnt{orientation}
+        \bnt{node_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation}
+        \bnt{node_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation}
 \end{Verbatim}
 %\end{verbatim}
 The format is quite obscure; the \nt{position} and the \nt{orientation}
@@ -360,8 +360,8 @@ All data are on one line, without continuation.
 The structural forces elements
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{force_type}: \bnt{force_label}
-        \bnt{node1_label} (\ty{Vec3})<arm1>
-        [ \bnt{node2_label} (\ty{Vec3})<arm2> ]
+        \bnt{node1_label} (\htmlref{\ty{Vec3}}{sec:Vec3})<arm1>
+        [ \bnt{node2_label} (\htmlref{\ty{Vec3}}{sec:Vec3})<arm2> ]
 
     \bnt{force_type} ::= \kw{structural} [ \kw{internal} ] \{ \kw{absolute} | \kw{follower} \} \{ \kw{force} | \kw{couple} \}
 \end{Verbatim}
@@ -373,14 +373,14 @@ as well, otherwise they must be omitted.
 The \kw{structural node}
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \kw{structural node}: \bnt{label} (\ty{Vec3}) \bnt{X} \bnt{orientation_description}
+    \kw{structural node}: \bnt{label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{X} \bnt{orientation_description}
 
     \bnt{orientation_description} ::=
-        \{ \kw{euler123} (\ty{Vec3}) \bnt{euler123_angles}
-            | \kw{euler313} (\ty{Vec3}) \bnt{euler313_angles}
-            | \kw{euler321} (\ty{Vec3}) \bnt{euler321_angles}
-            | \kw{phi} (\ty{Vec3}) \bnt{orientation_vector}
-            | \kw{mat} (\ty{Mat3x3}) \bnt{orientation_matrix} \}
+        \{ \kw{euler123} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{euler123_angles}
+            | \kw{euler313} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{euler313_angles}
+            | \kw{euler321} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{euler321_angles}
+            | \kw{phi} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{orientation_vector}
+            | \kw{mat} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_matrix} \}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{label} of the node, the position \nt{X}
@@ -394,8 +394,8 @@ The \kw{universal hinge} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{universalhinge}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position\_*} vectors indicates the location of the joint
@@ -409,8 +409,8 @@ The \kw{universal pin} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{universalpin}: \bnt{label}
-        \bnt{node_label} (\ty{Vec3}) \bnt{position} (\ty{Mat3x3}) \bnt{orientation}
-        \bnt{node_label} (\ty{Vec3}) \bnt{relative\_position} (\ty{Mat3x3}) \bnt{relative\_orientation}
+        \bnt{node_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation}
+        \bnt{node_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative\_position} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{relative\_orientation}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position} vector and the \nt{orientation} matrix indicate 
@@ -426,8 +426,8 @@ The \kw{universal rotation} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{universalrotation}: \bnt{label}
-        \bnt{node_1_label} (\ty{Vec3}) \bnt{position_1} (\ty{Mat3x3}) \bnt{orientation_1}
-        \bnt{node_2_label} (\ty{Vec3}) \bnt{position_2} (\ty{Mat3x3}) \bnt{orientation_2}
+        \bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_1} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_1}
+        \bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{position_2} (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{orientation_2}
 \end{Verbatim}
 %\end{verbatim}
 The \nt{position\_*} vectors are zero,
@@ -444,17 +444,17 @@ An aggregate inertia.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{inertia}: \bnt{label} (\bnt{name})
-        mass:        (\ty{Scalar}) \bnt{mass}
-        J:           (\ty{Mat3x3}) \bnt{J}
-        Xcg:         (\ty{Vec3}) \bnt{x_cg}
-        Jcg:         (\ty{Mat3x3}) \bnt{J_cg}
-        Vcg:         (\ty{Vec3}) \bnt{v_cg}
-        Wcg:         (\ty{Vec3}) \bnt{omega_cg}
-        Xcg-X:       (\ty{Vec3}) \bnt{relative_x_cg}
-        R^T*(Xcg-X): (\ty{Vec3}) \bnt{relative_orientation_x_cg}
-        Rp:          (\ty{Vec3}) \bnt{principal_axes_orientation_matrix}
-        Thetap:      (\ty{Vec3}) \bnt{principal_axes_orientation_vector}
-        Jp:          (\ty{Mat3x3}) \bnt{principal_inertia_matrix_cg}
+        mass:        (\ty{real}) \bnt{mass}
+        J:           (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{J}
+        Xcg:         (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{x_cg}
+        Jcg:         (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{J_cg}
+        Vcg:         (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{v_cg}
+        Wcg:         (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{omega_cg}
+        Xcg-X:       (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_x_cg}
+        R^T*(Xcg-X): (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_orientation_x_cg}
+        Rp:          (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{principal_axes_orientation_matrix}
+        Thetap:      (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{principal_axes_orientation_vector}
+        Jp:          (\htmlref{\ty{Mat3x3}}{sec:Mat3x3}) \bnt{principal_inertia_matrix_cg}
 \end{Verbatim}
 %\end{verbatim}
 
