--- a/mbdyn/manual/mybib.bib
+++ b/mbdyn/manual/mybib.bib
@@ -3083,3 +3083,23 @@
 	pdf = {masarati_2013_mubo_totalj.pdf}
 }
 
+@techreport{DOWELL-1975-PRINCETON-1194,
+	author = {E. H. Dowell and J. J. Traybar},
+	title = {An experimental study of the nonlinear stiffness of a rotor blade undergoing flap, lag, and twist deformations},
+	type = {Aerospace and Mechanical Science Report},
+	number = {1194},
+	institution = {Princeton University},
+	month = {January},
+	year = {1975}
+}
+
+@techreport{DOWELL-1975-PRINCETON-1257,
+	author = {E. H. Dowell and J. J. Traybar},
+	title = {An experimental study of the nonlinear stiffness of a rotor blade undergoing flap, lag, and twist deformations},
+	type = {Aerospace and Mechanical Science Report},
+	number = {1257},
+	institution = {Princeton University},
+	month = {December},
+	year = {1975}
+}
+
