--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -36,6 +36,8 @@ MBDyn 1.X-Devel
 		  (Reinhard Resch)
 		- fixed inertia computation with structural displacement
 		  nodes (noted by Mattia Alioli)
+		- fixed data initialization in external struct mapping
+		  with membrane elements
 
 MBDyn 1.5.5
 	Enhancements:
