--- a/mbdyn/TODO
+++ b/mbdyn/TODO
@@ -222,6 +222,8 @@ D. Code:
 	- implement constitutive law wrapper that combines (adds) constitutive laws (DONE)
 	- allow strain sign in hunt-crossley module (DONE; in all constitutive laws?)
 	- implement bistop constitutive law as a wrapper (DONE)
+	- exponential viscoelastic const law 1D
+	- wrapper for axial const laws (DONE)
 
 
 
