--- a/mbdyn/manual/input/modules.tex
+++ b/mbdyn/manual/input/modules.tex
@@ -149,7 +149,7 @@ implements a scalar mass-damper-spring system.
 \item 5-7:   position of nonsmooth node in global ref. frame
 \item 8-10:  velocity of nonsmooth node in global ref. frame
 \item 11-13: constraint reaction between multibody node and nonsmooth node
-\item 14:    norm of the impulse reaction in global ref. frame
+\item 14:    norm of the impulse reaction normal to the contact plane
 \item 15:    number of active constraints during step
 \end{itemize}
 if verbose, also:
